# watermark_pdf_tool

./: LICENSE  MANIFEST.in  README.md  debug_paragraph.py  generate_test_pdf.py  pdf_watermarker.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
demos/: generate_images.py  generate_sample.py
watermark_pdf_tool/: cli.py  watermark.py
